# BlazeFL

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.txt
.github/workflows/: ci.yaml  publish.yaml  sphinx.yaml
docs/: Makefile
docs/source/: conf.py  index.md  index.rst
docs/source/_templates/autosummary/: class.rst  module.rst
examples/experimental-freethreaded/: main.py  pyproject.toml
examples/experimental-freethreaded/config/: config.yaml
examples/experimental-freethreaded/core/: client_trainer.py
examples/quickstart-fedavg/: README.md  main.py  pyproject.toml
examples/quickstart-fedavg/dataset/: dataset.py
examples/step-by-step-dsfl/: .gitignore  README.md  main.py  tutorial.py
examples/step-by-step-dsfl/algorithm/: __init__.py  dsfl.py
examples/step-by-step-dsfl/models/: selector.py
src/blazefl/contrib/: __init__.py  example.py  fedavg.py
src/blazefl/core/: __init__.py  __init__.pyi  client_trainer.py  client_trainer.pyi  model_selector.py  partitioned_dataset.py  server_handler.py  shared_data.py  shared_disk.py
src/blazefl/utils/: __init__.py  seed.py  share.py
tests/test_contrib/: test_fedavg.py
tests/test_core/: test_client_trainer.py
tests/test_utils/: test_dataset.py  test_seed.py  test_serialize.py
